myK8S/searxng/searxng-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-svc
  namespace: personal
spec:
  selector:
    app: searxng
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
