myK8S/searxng/valkey-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: personal
  labels:
    app: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:8-alpine
          imagePullPolicy: IfNotPresent

          command:
            - valkey-server
            - "--save"
            - "30"
            - "1"
            - "--loglevel"
            - "warning"

          ports:
            - containerPort: 6379
              name: redis

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: personal
spec:
  selector:
    app: valkey
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
